# CppExcel

./: CMakeLists.txt  Dockerfile
.github/workflows/: cmake.yml
src/: Alignment.h  BarchartDiagram.cpp  BarchartDiagram.h  Cell.cpp  Cell.h  CellContent.cpp  CellContent.h  Color.cpp  Color.h  CommandProcessor.cpp  CommandProcessor.h  Input.cpp  Input.h  Range.cpp  Range.h  Row.cpp  Row.h  SortDirection.h  Table.cpp  Table.h  TableContainer.cpp  TableContainer.h  main.cpp  utils.cpp  utils.h
svg/: helper.txt  index.html
test/: diagram.csv  input.txt  output.txt  testExcel.csv
